frontend/src/style/index.scss
@use "./general/globals" as *;
@use "./general/layout";
@use "./components/loadingBox";
@use "./components/messageBox";
@use "./components/navbar";
@use "./components/menuMobile";
@use "./components/button";
@use "./components/form";
@use "./screens/singinScreen";
@use "./components/product";
@use "./screens/productScreen";
@use "./screens/shopScreen";
@use "./screens/cartScreen";
@use "./screens/shippingScreen";
@use "./components/cardsSection";
@use "./screens/placeOrderScreen";
@use "./screens/orderScreen";
@use "./screens/adminScreen";
@use "./components/table";
@use "./screens/productEditScreen";
@use "./components/carousel";
@use "./screens/aboutScreen";
@use "./screens/galleryScreen";
@use "./components/placeholder";
@use "./screens/notFoundScreen";
@use "./components/galleryImage";
@use "./screens/homeScreen";
@use "./screens/legalScreen";
@use "./screens/bookingScreen";
@use "./components/illustration";
@use "./components/video";
@use "./components/footer";
@use "./components/arrowUp";

#root {
  &.show {
    @include show-root;
  }
}
a {
  text-decoration: none;
  color: inherit;
  cursor: pointer !important;
}
button:not([disabled]) {
  cursor: pointer !important;
}
.notyf {
  cursor: pointer;
  padding-bottom: env(safe-area-inset-bottom, 0px) !important;
}
.notyf__dismiss-btn {
  border: none !important;
}
.swal2-shown {
  padding-right: 0 !important;
}
.SRLOpened,
.swal2-shown,
.ReactModal__Body--open {
  overflow: hidden !important;
  #root {
    overflow-y: scroll;
  }
}
.ril__toolbar {
  background-color: transparent !important;
  button {
    border: none !important;
  }
}
.slick-slider {
  button {
    display: none !important;
  }
}
.cookie-consent {
  background-color: white !important;
  color: black !important;
  background-color: whitesmoke !important;
  .cookie-consent-content {
    flex: auto !important;
  }
  .cookie-consent-btn {
    background-color: transparent !important;
  }
}

